tob/tps/.svn/pristine/d4/d4f401dac864fa0e3db272cea11ff008013046da.svn-base
allumettes/Jouer.java:10: error: '{' expected
     private enum Strategie [ humain, rapide, naif, expert ];
                           ^
allumettes/Jouer.java:10: error: ',', '}', or ';' expected
     private enum Strategie [ humain, rapide, naif, expert ];
                            ^
allumettes/Jouer.java:10: error: '}' expected
     private enum Strategie [ humain, rapide, naif, expert ];
                             ^
allumettes/Jouer.java:10: error: <identifier> expected
     private enum Strategie [ humain, rapide, naif, expert ];
                                    ^
allumettes/Jouer.java:10: error: ';' expected
     private enum Strategie [ humain, rapide, naif, expert ];
                                                          ^
5 errors
